Added pause option

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="border">
 <canvas width= 500px; height= 500px></canvas>   
 </div>
-
+<span>Press space to start/pause game. Use arrows to move.</span>
 </body>
 
 <script src="game.js"></script>
