Added collisions, food and score counter - ver. 1.0

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>   
-<title>Snake game pre-alfa v0.1</title> 
+<title>Snake game ver. 1.0</title> 
 <link rel="stylesheet" href="style.css">
 </head>
 
